<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/card_view_style">

    <TextView
        android:padding="@dimen/default_padding"
        android:id="@+id/tv_recipe_detail_short_description_text_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/primary_text_size"
        android:textStyle="bold"
        tools:text="Any Description to test"/>

</android.support.v7.widget.CardView>