<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StepFragment"
    android:orientation="vertical"
    android:layout_margin="@dimen/default_margin">
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.exoplayer2.ui.PlayerView
            android:layout_width="match_parent"
            android:layout_height="@dimen/player_view_height"
            android:id="@+id/player_view_step_fragment_id"/>
    </FrameLayout>

    <TextView
        android:layout_margin="@dimen/default_margin"
        android:id="@+id/tv_step_description_text_view_fragment_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:text="Step Description"
        android:textSize="@dimen/primary_text_size"
        android:textStyle="bold"/>

</LinearLayout>