<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/swipe_refresh_layout_id_main_activity"
    tools:context=".MainActivity">

  <android.support.design.widget.CoordinatorLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:id="@+id/coordinator_layout_id">

  <android.support.v7.widget.RecyclerView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/rv_recipe_recycler_view_main_activity_id"/>


  <TextView
      android:id="@+id/tv_empty_text_view_main_activity_id"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:gravity="center"
      tools:text="test error message"
      android:textStyle="bold"
      android:textSize="@dimen/primary_text_size"
      android:visibility="gone"/>

      <ProgressBar
          android:id="@+id/progress_par_main_activity_id"
          android:layout_width="@dimen/progress_bar_size"
          android:layout_height="@dimen/progress_bar_size"
          android:layout_gravity="center"
          android:visibility="gone" />
  </android.support.design.widget.CoordinatorLayout>
</android.support.v4.widget.SwipeRefreshLayout>