...
      <View
          android:layout_width="1dp"
          android:layout_height="@dimen/view_divider_height"
          android:layout_margin="@dimen/default_margin"
          android:background="@color/grey"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toStartOf="@+id/btn_next_step_button_id"
          app:layout_constraintHorizontal_bias="0.572"
          app:layout_constraintStart_toEndOf="@+id/btn_previous_step_button_id"
          app:layout_constraintTop_toBottomOf="@+id/fl_step_container_fragment_id"
          app:layout_constraintVertical_bias="0.384" />

      <Button
...
